--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   #UI
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.3.0
+  flutter_screenutil: ^5.9.0
 
 
 dev_dependencies:
