--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   equatable: ^2.0.5
   dio: ^5.3.4
   intl: ^0.18.1
+  flutter_dotenv: ^5.1.0
 
   #UI
   cupertino_icons: ^1.0.2
@@ -39,5 +40,6 @@ flutter:
   uses-material-design: true
 
   assets:
+    - .env
     - assets/
   #   - images/a_dot_ham.jpeg
