--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.3.0
   flutter_screenutil: ^5.9.0
-
+  flutter_animate: ^4.3.0
 
 dev_dependencies:
   flutter_test:
